--- a/flaskProject/templates/FindingView.html
+++ b/flaskProject/templates/FindingView.html
@@ -7,7 +7,7 @@
     <form method=post>
         <button type="submit" class="btn btn-secondary"><a href="{{ url_for('EditFinding', finding=finding.getid()) }}">Edit
             Finding</a></button>
-        <button type="submit" value="submit" name="ArchiveFinding" class="btn btn-secondary">Delete Finding</button>
+        <button type="submit" value="submit" name="ArchiveFinding" class="btn btn-secondary">Archive Finding</button>
         <button type="submit" class="btn btn-secondary"><a href="{{ url_for('Help') }}">Help</a></button>
     </form>
     <hr>
@@ -154,32 +154,3 @@
     <hr>
 
 {% endblock content %}
-{% block sidebar %}
-    <!-- side bar -->
-    <div class="content-section">
-        <h3>FRIC Menu</h3>
-        <p class='text-muted'>You can put any information here you'd like.
-        <ul class="list-group">
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('EventTree') }}"> Event Tree</a></li>
-            <li class="list-group-item list-group-item-light"><a
-                    href="{{ url_for('AnalystProgressSummaryContentView') }}"> Analyst Progress Summary</a></li>
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('EventView') }}">Event Overview</a>
-            </li>
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('Systems') }}"> Systems</a></li>
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('Tasks') }}"> Tasks</a></li>
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('Subtasks') }}"> Subtasks</a></li>
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('FindingsView') }}"> Findings</a></li>
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('ArchiveContentView') }}"> Archived
-                Contents</a>
-            </li>
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('ConfigurationContentView') }}">
-                Configuration</a></li>
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('SetupContentView') }}"> Setup</a>
-            </li>
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('Help',_anchor='detailedFinding') }}">
-                Help</a></li>
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('Sync') }}"> Sync</a></li>
-        </ul>
-        </p>
-    </div>
-{% endblock %}
