fixed bug regarding the display of the analysts initials in tasks/subtasks/findings detailed views

--- a/flaskProject/templates/EditAnalyst.html
+++ b/flaskProject/templates/EditAnalyst.html
@@ -4,7 +4,7 @@
 <!-- html code for the body of the page-->
 {% block content %}
     <h1>Edit Analyst</h1>
-    <form method="POST">
+    <form action="" method="POST">
         <div class="form-group">
             {{ form.EditAnalystFName.label }}            <br>
             {{ form.EditAnalystFName(class_="form-control") }}
