--- a/flaskProject/templates/TaskView.html
+++ b/flaskProject/templates/TaskView.html
@@ -48,7 +48,7 @@
     <hr>
 
     <h4>analyst: </h4>
-    {% for analyst in analystAssg %}
+    {% for analyst in task.getAnalystAssigment() %}
         <ul>
             <li style="list-style-type: circle">
                 {{ analyst }}
@@ -57,7 +57,7 @@
     {% endfor %}
     <hr>
     <h4>Collaborate </h4>
-    {% for collaborator in collaborators %}
+    {% for collaborator in task.getCollaboratorAssignment() %}
         <ul>
             <li style="list-style-type: circle">
                 {{ collaborator }}
