--- a/flaskProject/templates/CreateAnalyst.html
+++ b/flaskProject/templates/CreateAnalyst.html
@@ -16,6 +16,9 @@
             {{ form.CreateAnalystLName(class_="form-control") }}
         </div>
         <div class="form-group">
+            {% if errorMessage %}
+                <p class="alert-danger form-control"> {{ errorMessage }} </p>
+            {% endif %}
             {{ form.CreateAnalystInitials.label }}
             <br>
             {{ form.CreateAnalystInitials(class_="form-control") }}
