--- a/flaskProject/templates/EditAnalyst.html
+++ b/flaskProject/templates/EditAnalyst.html
@@ -6,13 +6,18 @@
     <h1>Edit Analyst</h1>
     <form action="" method="POST">
         <div class="form-group">
-            {{ form.EditAnalystFName.label }}            <br>
+            {{ form.EditAnalystFName.label }} <br>
             {{ form.EditAnalystFName(class_="form-control") }}
         </div>
         <div class="form-group">
             {{ form.EditAnalystLName.label }}
             <br>
             {{ form.EditAnalystLName(class_="form-control") }}
+        </div>
+        <div class="form-group">
+            {{ form.EditAnalystTitle.label }}
+            <br>
+            {{ form.EditAnalystTitle(class_="form-control") }}
         </div>
         <div class="form-group">
             {{ form.EditAnalystInitials.label }}
