--- a/flaskProject/templates/layout.html
+++ b/flaskProject/templates/layout.html
@@ -62,7 +62,7 @@
                         <li class="list-group-item list-group-item-light"><a href="{{ url_for('FindingsView') }}">
                             Findings</a></li>
                         <li class="list-group-item list-group-item-light"><a href="{{ url_for('ArchiveContentView') }}">
-                            Archive
+                            Archived
                             Contents</a>
                         </li>
                         <li class="list-group-item list-group-item-light"><a
