Added the libraries that where use to create the final, risk, and emb report

--- a/flaskProject/templates/Help.html
+++ b/flaskProject/templates/Help.html
@@ -146,6 +146,14 @@
     <h4>Bootstrap</h4>
         <ul><li>How to install: <p>pip install bootstrap</p></li></ul>
     <h4>Pymongo</h4>
-    <ul><li>How to install: <p>pip install pymongo</p></li></ul>
+        <ul><li>How to install: <p>pip install pymongo</p></li></ul>
     <h4>HTML5</h4>
+
+    <h4>XlsWriter</h4>
+        <ul><li>How to install: <p>pip install xlsxwriter</p></li></ul>
+    <h4>Docx</h4>
+        <ul><li>How to install: <p>pip install python-docx</p></li></ul>
+    <h4>Pptx</h4>
+        <ul><li>How to install: <p>pip install python-pptx</p></li></ul>
+
 {% endblock %}
